cmake_minimum_required(VERSION 3.3.2)
project (121Nat)
INCLUDE_DIRECTORIES(lib/src/jsoncpp/include)
INCLUDE_DIRECTORIES(lib/src/libtins/include)
INCLUDE_DIRECTORIES(lib/src/easyloggingpp/src/)
ADD_SUBDIRECTORY(src)
ADD_SUBDIRECTORY(lib/src/jsoncpp)
ADD_SUBDIRECTORY(lib/src/libtins)
set_property(TARGET 121Nat PROPERTY CXX_STANDARD 11)
set_property(TARGET 121Nat PROPERTY CXX_STANDARD_REQUIRED ON)
