cmake_minimum_required(VERSION 3.3.2)
project (121Nat)
INCLUDE_DIRECTORIES(lib/src/jsoncpp/include)
INCLUDE_DIRECTORIES(lib/src/libtins/include)
INCLUDE_DIRECTORIES(lib/src/easyloggingpp/src/)
ADD_SUBDIRECTORY(src)
SET(JSONCPP_WITH_TESTS OFF)
SET(JSONCPP_WITH_POST_BUILD_UNITTEST OFF)
SET(JSONCPP_WITH_PKGCONFIG_SUPPORT OFF)
SET(JSONCPP_WITH_CMAKE_PACKAGE OFF)
SET(BUILD_SHARED_LIBS OFF)
SET(BUILD_STATIC_LIBS ON)
ADD_SUBDIRECTORY(lib/src/jsoncpp)
SET(BUILD_SHARED_LIBS ON)
SET(LIBTINS_BUILD_SHARED OFF)
SET(LIBTINS_ENABLE_CXX11 ON)
SET(LIBTINS_ENABLE_WPA2 OFF)
SET(LIBTINS_ENABLE_DOT11 OFF)
SET(HAVE_PCAP_IMMEDIATE_MODE ON)
SET(LIBTINS_ENABLE_ACK_TRACKER OFF)
SET(LIBTINS_ENABLE_WPA2_CALLBACKS OFF)
SET(CMAKE_MODULE_PATH ${PROJECT_SOURCE_DIR}/lib/src/libtins/cmake/Modules)
ADD_SUBDIRECTORY(lib/src/libtins)
set_property(TARGET 121Nat PROPERTY CXX_STANDARD 11)
set_property(TARGET 121Nat PROPERTY CXX_STANDARD_REQUIRED ON)
